tdf#150773: Avoid bringing loading files to front several times

The change attempts to establish this logic:
1. Honor the ForceFocusAndToFront setting uniformly: previously, it
   was ignored when reusing existing windows (opening in Start Center,
   in place of an empty document, or trying to open an already opened
   document);
2. When ForceFocusAndToFront is set, try to activate the window as
   early as possible (before loading begind), as a feedback to user,
   and also to avoid situations when activation would be impossible
   later (e.g., there is a timespan on Windows, during which entitled
   applications can bring themselves to foreground; a lengthy loading
   process can exceed that time);
3. If activated once, do not activate second time after loading ends,
   to avoid nagging users who deliberately switched to other tasks.

Explicit calls to impl_makeFrameWindowVisible were removed from
impl_searchAlreadyLoaded and impl_isFrameAlreadyUsedForLoading,
because those functions are called from impl_loadContent, which makes
sure that they are followed by a call to impl_makeFrameWindowVisible
(either in impl_setResult -> impl_reactForLoadingState, or directly).

A fix to tdf#83773 was adjusted; I checked that the bug doesn't
reappear after that.

Change-Id: I4bdcf978d43016d1e8979adf2fdf108a37f6ba2d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139362
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>